Fix flicker when hovering over deck list (#2958)
* Remove backdrop-filter from deck browser

* Remove transition

--- a/qt/aqt/data/web/css/deckbrowser.scss
+++ b/qt/aqt/data/web/css/deckbrowser.scss
@@ -16,9 +16,7 @@ table {
         &:hover {
             @include elevation(2);
         }
-        transition: box-shadow var(--transition) ease-in-out;
         background: var(--canvas-glass);
-        backdrop-filter: blur(var(--blur));
     }
 }
 
